--- a/index.html
+++ b/index.html
@@ -53,47 +53,81 @@
                 </div>
 
                 <div class="songItem">
-                    <img src="po3.jpg" alt="Album Cover">
-                    <span class="songName">Preet Re</span>
+                    <img src="po3.webp" alt="Album Cover">
+                    <span class="songName">Dooron Dooron</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="2"></i>
                 </div>
 
                 <div class="songItem">
                     <img src="po4.webp" alt="Album Cover">
-                    <span class="songName">Ishq Hai</span>
+                    <span class="songName">Samjho Na</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="3"></i>
                 </div>
 
                 <div class="songItem">
-                    <img src="po5.jpg" alt="Album Cover">
-                    <span class="songName">O Maahi</span>
+                    <img src="po5.webp" alt="Album Cover">
+                    <span class="songName">Arz Kiya Hai</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="4"></i>
                 </div>
+
+                <div class="songItem">
+                    <img src="po6.webp" alt="Album Cover">
+                    <span class="songName">Ehsaas</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="5"></i>
+                </div>
+
+                <div class="songItem">
+                    <img src="po7.webp" alt="Album Cover">
+                    <span class="songName">Kashish</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="6"></i>
+                </div>
+
+                <div class="songItem">
+                    <img src="po8.jpg" alt="Album Cover">
+                    <span class="songName">Gabriela</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="7"></i>
+                </div>
+
+                <div class="songItem">
+                    <img src="po9.webp" alt="Album Cover">
+                    <span class="songName">We Don't Talk Anymore</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="8"></i>
+                </div>
+
+                <div class="songItem">
+                    <img src="po10.webp" alt="Album Cover">
+                    <span class="songName">Attention</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="9"></i>
+                </div>
+
+
             </div>
-        </div>
 
-    </div>
+            <!-- BOTTOM PLAYER -->
+            <div class="bottom">
+                <input type="range" id="myProgressBar" min="0" max="100">
+                <div class="controls">
+                    <i class="fa-solid fa-shuffle" id="shuffle"></i>
+                    <i class="fa-solid fa-backward-step" id="prev"></i>
+                    <i class="fa-solid fa-play" id="masterPlay"></i>
+                    <i class="fa-solid fa-forward-step" id="next"></i>
+                    <i class="fa-solid fa-repeat" id="repeat"></i>
+                </div>
+                <div class="volume-box">
+                    <i class="fa-solid fa-volume-high" id="muteBtn"></i>
+                    <input type="range" id="volumeControl" min="0" max="100" value="80">
+                </div>
+            </div>
 
-    <!-- BOTTOM PLAYER -->
-    <div class="bottom">
-        <input type="range" id="myProgressBar" min="0" max="100">
-        <div class="controls">
-            <i class="fa-solid fa-shuffle" id="shuffle"></i>
-            <i class="fa-solid fa-backward-step" id="prev"></i>
-            <i class="fa-solid fa-play" id="masterPlay"></i>
-            <i class="fa-solid fa-forward-step" id="next"></i>
-            <i class="fa-solid fa-repeat" id="repeat"></i>
-        </div>
-        <div class="volume-box">
-            <i class="fa-solid fa-volume-high" id="muteBtn"></i>
-            <input type="range" id="volumeControl" min="0" max="100" value="80">
-        </div>
-    </div>
-
-    <script src="script.js"></script>
+            <script src="script.js"></script>
 </body>
 
 </html>
