--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="logo.png" type="image/png">
-
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="theme-color" content="#1db954">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -31,7 +31,7 @@
     <div class="container">
 
         <div class="banner">
-            <img id="bannerImage" src="po1.jpeg" alt="Album Cover">
+            <img id="bannerImage" src="banner.jpg" alt="Album Cover">
         </div>
 
         <div class="song-list">
@@ -114,6 +114,7 @@
             <!-- BOTTOM PLAYER -->
             <div class="bottom">
                 <input type="range" id="myProgressBar" min="0" max="100">
+                <p id="updateTime" class="timestamp"></p>
                 <div class="controls">
                     <i class="fa-solid fa-shuffle" id="shuffle"></i>
                     <i class="fa-solid fa-backward-step" id="prev"></i>
