--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <nav>
         <div class="nav-left">
             <ul>
-                <li class="brand"><img src="logo.png" alt="Spotify Logo"></li>
-                <li class="title">Spotify</li>
+                <li class="brand"><img src="logo.png" alt="DiTunes Logo"></li>
+                <li class="title">DiTunes</li>
             </ul>
         </div>
     </nav>
@@ -31,83 +31,116 @@
     <div class="container">
 
         <div class="banner">
-            <img id="bannerImage" src="banner.jpg" alt="Album Cover">
+            <img id="bannerImage" src="banner.webp" alt="Album Cover">
         </div>
 
         <div class="song-list">
             <h1>Your Favourites</h1>
             <div class="songContainer">
-
                 <div class="songItem">
-                    <img src="po1.jpeg" alt="Album Cover">
-                    <span class="songName">Perfect</span>
+                    <img src="po4.webp" alt="Album Cover">
+                    <span class="songName">Dooron Dooron</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="0"></i>
                 </div>
 
                 <div class="songItem">
-                    <img src="po2.webp" alt="Album Cover">
-                    <span class="songName">Promise</span>
+                    <img src="po5.webp" alt="Album Cover">
+                    <span class="songName">Ehsaas</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="1"></i>
                 </div>
 
                 <div class="songItem">
-                    <img src="po3.webp" alt="Album Cover">
-                    <span class="songName">Dooron Dooron</span>
+                    <img src="po6.webp" alt="Album Cover">
+                    <span class="songName">Kashish</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="2"></i>
                 </div>
 
                 <div class="songItem">
-                    <img src="po4.webp" alt="Album Cover">
-                    <span class="songName">Samjho Na</span>
+                    <img src="po1.webp" alt="Album Cover">
+                    <span class="songName">Arziyaan</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="3"></i>
                 </div>
 
                 <div class="songItem">
-                    <img src="po5.webp" alt="Album Cover">
-                    <span class="songName">Arz Kiya Hai</span>
+                    <img src="po2.webp" alt="Album Cover">
+                    <span class="songName">Bairiyaa</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="4"></i>
                 </div>
 
                 <div class="songItem">
-                    <img src="po6.webp" alt="Album Cover">
-                    <span class="songName">Ehsaas</span>
+                    <img src="po3.webp" alt="Album Cover">
+                    <span class="songName">Haseen</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="5"></i>
                 </div>
 
                 <div class="songItem">
                     <img src="po7.webp" alt="Album Cover">
-                    <span class="songName">Kashish</span>
+                    <span class="songName">Hope</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="6"></i>
                 </div>
 
                 <div class="songItem">
-                    <img src="po8.jpg" alt="Album Cover">
-                    <span class="songName">Gabriela</span>
+                    <img src="po7.webp" alt="Album Cover">
+                    <span class="songName">I'm Done</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="7"></i>
                 </div>
 
                 <div class="songItem">
                     <img src="po9.webp" alt="Album Cover">
-                    <span class="songName">We Don't Talk Anymore</span>
+                    <span class="songName">Mera Mann</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="8"></i>
                 </div>
 
                 <div class="songItem">
                     <img src="po10.webp" alt="Album Cover">
-                    <span class="songName">Attention</span>
+                    <span class="songName">Pal Pal</span>
                     <span class="songDuration">--:--</span>
                     <i class="fa-solid fa-play songPlayBtn" data-index="9"></i>
                 </div>
 
+                <div class="songItem">
+                    <img src="po11.webp" alt="Album Cover">
+                    <span class="songName">Preet Re</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="10"></i>
+                </div>
+
+                <div class="songItem">
+                    <img src="po12.webp" alt="Album Cover">
+                    <span class="songName">Samjhawan</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="11"></i>
+                </div>
+
+                <div class="songItem">
+                    <img src="po13.webp" alt="Album Cover">
+                    <span class="songName">Soniyo</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="12"></i>
+                </div>
+
+                <div class="songItem">
+                    <img src="po14.webp" alt="Album Cover">
+                    <span class="songName">Zaalima</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="13"></i>
+                </div>
+
+                <div class="songItem">
+                    <img src="po15.webp" alt="Album Cover">
+                    <span class="songName">Zaroor</span>
+                    <span class="songDuration">--:--</span>
+                    <i class="fa-solid fa-play songPlayBtn" data-index="14"></i>
+                </div>
 
             </div>
 
